@@ -5,6 +5,11 @@ PHOEBE Project ChangeLog:
               were updated to erroneous fields (the last occurence of the
               spot parameter was updated to *all* spot fields). Fixed.
               Many thanks to Ron Kaitchuck for pointing this out!
+            - The constraints of the overcontact binary not in thermal
+              contact did not correspond to the WD set of constraints; in
+              particular, A2, g2, x2 and y2 should not have been
+              constrained, but they were nevertheless. Fixed. Many thanks
+              to Ron Kaitchuck for pointing this out!
 2006-01-03: - Stale debugging printout was removed from the terminal.
 2005-12-31: - Well, I got two bug reports today, do you expect me to stand
               still and do nothing about it? Don't worry, the party begins
